Prevent history list rows from wrapping

--- a/public/css/hanabi.css
+++ b/public/css/hanabi.css
@@ -198,6 +198,8 @@ ul {
 
 	border: 1px solid #444;
 	border-radius: 5px;
+
+	white-space: nowrap;
 }
 
 #game-history-details {
